gem ruby-fann added

--- a/ShallWeEat/Gemfile
+++ b/ShallWeEat/Gemfile
@@ -33,6 +33,10 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # gem 'capistrano-rails', group: :development
 #
 
+# Fast Artificial Neural Network Library
+gem 'ruby-fann'
+
+
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
