--- a/ShallWeEat/Gemfile
+++ b/ShallWeEat/Gemfile
@@ -49,5 +49,10 @@ group :development, :test do
   gem 'spring'
 
   gem 'simplecov', :require=>false
+
+  gem 'cucumber-rails', :require => false
+  gem 'database_cleaner'
+  gem 'capybara'
+  gem 'selenium-webdriver'
 end
 
