--- a/ShallWeEat/Gemfile
+++ b/ShallWeEat/Gemfile
@@ -42,6 +42,8 @@ gem "therubyracer"
 gem "less-rails-bootstrap" #Sprockets (what Rails 3.1 uses for its asset pipeline) supports LESS
 gem "twitter-bootstrap-rails"
 
+gem "addressable"
+
 
 
 group :development, :test do
