--- a/ShallWeEat/Gemfile
+++ b/ShallWeEat/Gemfile
@@ -60,5 +60,9 @@ group :development, :test do
   gem 'database_cleaner'
   gem 'capybara'
   gem 'selenium-webdriver'
+
+  # Test Unit
+  gem 'test-unit'
+
 end
 
